--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "maze-adventure",
   "version": "1.0.0",
   "description": "Simple maze exploration game",
-  "author": "Igor Nesterenko <igornester@gmail.com>",
+  "author": "Igor Nesterenko <igor.nesterenko@globallogic.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
