--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://okyesanap.github.io/Maze-Adventures/",
+  "homepage": "https://github.com/OkYesAnap/Maze-Adventures",
   "name": "maze-adventure",
   "version": "1.0.0",
   "description": "Simple maze exploration game",
